testdata/baselines/reference/submodule/conformance/esmModuleExports2(esmoduleinterop=true).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
/importer-cjs.cjs(2,5): error TS2351: This expression is not constructable.
  Type 'typeof import("/exporter")' has no construct signatures.
/importer-cts.cts(2,5): error TS2351: This expression is not constructable.
  Type 'typeof import("/exporter")' has no construct signatures.
/importer-cts.cts(8,5): error TS2351: This expression is not constructable.
  Type 'typeof import("/exporter")' has no construct signatures.
/importer-cts.cts(10,10): error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?


!!! error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
==== /importer-cjs.cjs (1 errors) ====
    const Foo = require("./exporter.mjs");
    new Foo();
        ~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof import("/exporter")' has no construct signatures.
    
==== /importer-cts.cts (3 errors) ====
    import Foo = require("./exporter.mjs");
    new Foo();
        ~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof import("/exporter")' has no construct signatures.
    
    import Foo2 from "./exporter.mjs";
    new Foo2();
    
    import * as Foo3 from "./exporter.mjs";
    new Foo3();
        ~~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'typeof import("/exporter")' has no construct signatures.
    
    import { Oops } from "./exporter.mjs";
             ~~~~
!!! error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?
    
==== /exporter.mts (0 errors) ====
    export default class Foo {}
    const oops = "oops";
    export { oops as "module.exports" };